# elastic-resume-base

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  build_shared.bat  build_shared.sh  build_shared_python.bat  build_shared_python.sh  cloudbuild.yaml  code review.md  config_example.yaml  docker-compose.yml  env.yaml  firebase.json  package-lock.json  start_firebase_emulators.bat  start_firebase_emulators.sh
ai-worker/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
ai-worker/app/: __init__.py  config.py  main.py  rate_limit.py
ai-worker/app/models/: __init__.py  pubsub.py  resume.py
ai-worker/app/repositories/: __init__.py  resume_repository.py
ai-worker/app/routers/: __init__.py  health.py  pubsub.py
ai-worker/app/services/: __init__.py  ai_worker_service.py  pubsub_service.py  vertex_ai_service.py
ai-worker/app/utils/: __init__.py  load_config_yaml.py
ai-worker/tests/: __init__.py  conftest.py  test_ai_worker_service.py  test_health_endpoint.py  test_models_pubsub.py  test_pubsub_router.py  test_pubsub_service.py  test_resume_repository.py  test_vertex_ai_service.py
ingestor-service/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
ingestor-service/app/: __init__.py  config.py  main.py  rate_limit.py
ingestor-service/app/models/: __init__.py
ingestor-service/app/routes/: __init__.py  health.py  ingest.py
ingestor-service/app/services/: __init__.py  drive_service.py  ingest_service.py  resume_store.py  sheets_service.py
ingestor-service/tests/: conftest.py  test_drive_service.py  test_ingest_route.py  test_ingest_service.py  test_resume_store.py  test_sheets_service.py
shared/Bowltie/: README.md  package-lock.json  package.json  pyproject.toml
shared/Bowltie/bowltie_py/: CHANGELOG.md  pyproject.toml
shared/Bowltie/bowltie_py/bowltie_py/: __init__.py
shared/Bowltie/bowltie_ts/: README.md  package-lock.json
shared/Bowltie/bowltie_ts/tests/: __init__.py  test_response.py
shared/Bowltie/src/: index.ts
shared/Bowltie/tests/unit/: response.test.ts
shared/Bowltie/v1/bowltie_py/: README.md  requirements.txt
shared/Bowltie/v1/bowltie_py/bowltie_py/: __init__.py  response.py
shared/Bowltie/v1/bowltie_ts/: CHANGELOG.md  README.md  package.json  tsconfig.json
shared/Bugle/v2/bugle_py/: README.md  pyproject.toml
shared/Bugle/v2/bugle_py/bugle_py/: __init__.py  auth.py
shared/Harbor/v1/harbor_py/: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
shared/Harbor/v1/harbor_py/harbor_py/: client.py
shared/Harbor/v1/harbor_py/tests/: test_harbor.py
shared/Harbor/v2/harbor_py/: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
shared/Harbor/v2/harbor_py/harbor_py/: __init__.py
shared/Harbor/v2/harbor_py/requirements/: requirements-dev.txt
shared/Harbor/v2/harbor_py/tests/: test_harbor.py
shared/Hermes/: README.md  pyproject.toml
shared/Hermes/hermes_py/: CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements-dev.txt
shared/Hermes/hermes_py/hermes_py/: __init__.py  messaging.py
shared/Hermes/hermes_py/hermes_py/interfaces/: messaging_service.py
shared/Hermes/hermes_py/hermes_py/services/: __init__.py  smtp_messaging_service.py
shared/Hermes/hermes_py/services/: smtp_messaging_service.py
shared/Hermes/hermes_ts/: CHANGELOG.md  package-lock.json  package.json
shared/Hermes/hermes_ts/src/: index.ts
shared/Hermes/hermes_ts/src/interfaces/: messaging-service.ts  pub-sub-publisher.ts
shared/Hermes/hermes_ts/src/services/: pub-sub-publisher.ts
shared/Hermes/hermes_ts/tests/: conftest.py  test_messaging.py
shared/Hermes/hermes_ts/tests/unit/: pub-sub.test.ts  (+1 more)
shared/Hermes/src/services/: smtp-messaging-service.ts
shared/Hermes/v1/hermes_ts/: README.md  jest.config.cjs  package-lock.json  package.json
shared/Synapse/v1/synapse_py/: README.md  pyproject.toml
shared/Toolbox/: .eslintrc.cjs  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
shared/Toolbox/src/: createLogger.ts  errors.ts  index.ts  loadConfigYaml.ts
shared/Toolbox/src/middleware/: correlationId.ts  requestLogger.ts
shared/Toolbox/tests/unit/: createLogger.test.ts  loadConfigYaml.test.ts
shared/Toolbox/toolbox_py/: README.md  pyproject.toml  requirements.txt
shared/Toolbox/toolbox_py/toolbox_py/: __init__.py  errors.py  logger.py
shared/Toolbox/toolbox_ts/: CHANGELOG.md  README.md  package.json  tsconfig.json
shared/Toolbox/toolbox_ts/src/: api-types.ts  errors.d.ts.map  index.ts
shared/Toolbox/toolbox_ts/tests/: __init__.py  test_api_types.py  test_errors.py  test_logger.py
shared/Toolbox/v1/toolbox_py/: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
shared/Toolbox/v1/toolbox_ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
shared/bowltie/: pyproject.toml  requirements-dev.txt  requirements.txt
shared/bowltie/bowltie/: __init__.py  response.py
shared/bowltie/tests/: __init__.py  test_response.py
shared/synapse/: pyproject.toml  requirements-dev.txt  requirements.txt
shared/synapse/synapse/: __init__.py  errors.py  persistence.py
shared/synapse/synapse/interfaces/: __init__.py  resume_document_store.py  resume_embedding_store.py  resume_store.py
shared/synapse/synapse/repositories/: __init__.py  firestore_resume_document_store.py  firestore_resume_embedding_store.py  firestore_resume_store.py
shared/synapse/tests/: __init__.py  conftest.py  test_firestore_resume_store.py  test_persistence.py  test_resume_document_store.py  test_resume_embedding_store.py
shared/toolbox/: pyproject.toml  requirements-dev.txt  requirements.txt
shared/toolbox/tests/: __init__.py  test_config_yaml.py  test_correlation_id.py  test_logger.py  test_middleware.py  test_request_logger.py
shared/toolbox/toolbox/: __init__.py  config_yaml.py  errors.py  logger.py  middleware.py
shared/toolbox/toolbox/middleware/: __init__.py  correlation_id.py  request_logger.py
(+853 files in other folders)
