[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-bowltie"
version = "1.0.0"
description = "Standard API response formatting for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = []

# ---------------------------------------------------------------------------
# Package discovery
#
# The Python source lives in bowltie_py/ but is installed as the `bowltie`
# package so consumers simply write `from bowltie import format_success`.
# ---------------------------------------------------------------------------

[tool.setuptools]
packages = ["bowltie"]

[tool.setuptools.package-dir]
bowltie = "bowltie_py"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["bowltie_py"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
