[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-hermes"
version = "1.0.0"
description = "Shared messaging abstraction library for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.7.1",
    "pydantic-settings==2.3.4",
]

# ---------------------------------------------------------------------------
# Package discovery
#
# The Python source lives in hermes_py/ but is installed as the `hermes`
# package so that consumers simply do `from hermes import ...`.
# ---------------------------------------------------------------------------

[tool.setuptools]
packages = ["hermes", "hermes.interfaces", "hermes.services"]

[tool.setuptools.package-dir]
hermes = "hermes_py"
"hermes.interfaces" = "hermes_py/interfaces"
"hermes.services" = "hermes_py/services"

# ---------------------------------------------------------------------------
# pytest — tests live under hermes_ts/tests/ (shared test suite)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["hermes_ts/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["hermes_py"]
omit = ["hermes_ts/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
