[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-toolbox"
version = "1.0.0"
description = "Cross-cutting utilities for Elastic Resume Base Python services — structured logging and standard HTTP error classes"
requires-python = ">=3.11"
dependencies = []

# ---------------------------------------------------------------------------
# Package discovery
#
# The Python source lives in toolbox_py/ but is installed as the `toolbox`
# package so consumers simply write `from toolbox import setup_logging`.
# ---------------------------------------------------------------------------

[tool.setuptools]
packages = ["toolbox"]

[tool.setuptools.package-dir]
toolbox = "toolbox_py"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["toolbox_py"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
