[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-bowltie"
version = "1.0.0"
description = "Standard API response envelope types for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bowltie*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bowltie"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
