[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-toolbox"
version = "1.0.0"
description = "Shared logging and utility library for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["toolbox*"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["toolbox"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
