[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-toolbox"
version = "1.0.0"
description = "Shared error hierarchy and HTTP middleware for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "httpx>=0.27.0",
    "fastapi==0.111.0",
    "ruff==0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["toolbox*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["toolbox"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
