[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-hermes"
version = "1.0.0"
description = "Shared messaging abstraction library for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.7.1",
    "pydantic-settings==2.3.4",
]

[project.optional-dependencies]
# Install google-cloud-pubsub to enable the PubSubPublisher:
#   pip install "elastic-resume-base-hermes[pubsub]"
pubsub = [
    "google-cloud-pubsub>=2.21.0",
]

# ---------------------------------------------------------------------------
# Package discovery
#
# The importable source lives in the hermes_py/ sub-directory.  Consumers
# write `from hermes_py import initialize_messaging_from_env`.
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_py*"]

# ---------------------------------------------------------------------------
# pytest — tests live under hermes_ts/tests/ (shared test suite)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["../hermes_ts/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = ["../hermes_ts/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
