[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-harbor"
version = "1.0.0"
description = "Shared HTTP request abstraction (HarborClient) for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

# ---------------------------------------------------------------------------
# Package discovery
#
# The importable source lives in the harbor_py/ sub-directory.  Consumers
# write `from harbor_py import HarborClient, create_harbor_client`.
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["harbor_py*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
