[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-synapse"
version = "1.0.0"
description = "Persistence layer abstraction for Elastic Resume Base Python services"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Install google-cloud-firestore to enable Firestore repositories:
#   pip install "elastic-resume-base-synapse[firestore]"
firestore = [
    "firebase-admin>=6.5.0",
]

# ---------------------------------------------------------------------------
# Package discovery
#
# The importable source lives in the synapse_py/ sub-directory.  Consumers
# write `from synapse_py import initialize_persistence`.
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["synapse_py*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
