[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-resume-base-toolbox"
version = "1.1.0"
description = "Cross-cutting utilities for Elastic Resume Base Python services — structured logging and standard HTTP error classes"
requires-python = ">=3.11"
dependencies = []

# ---------------------------------------------------------------------------
# Package discovery
#
# The importable source lives in the toolbox_py/ sub-directory.  Consumers
# write `from toolbox_py import setup_logging`.
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["toolbox_py*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["../toolbox_ts/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = ["../toolbox_ts/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
